Include/rsnrpz.h

typedef unsigned int        ViUInt32;
typedef _VI_SIGNED int      ViInt32;
typedef unsigned long       ViUInt32;
typedef _VI_SIGNED long     ViInt32;
typedef _VI_SIGNED short    ViInt16;
typedef char                ViChar;
typedef double              ViReal64;
typedef ViUInt16            ViBoolean;
typedef ViInt32             ViStatus;
typedef ViUInt32            ViSession;
ViStatus _VI_FUNC rsnrpz_chan_getAuxiliary (ViSession instrumentHandle,
                                            ViInt32 channel,
                                            ViInt32* auxiliaryValue);
ViStatus _VI_FUNC rsnrpz_meass_readMeasurement (ViSession instrumentHandle,
                                                ViInt32 channel, ViInt32 timeout_ms,
                                                ViReal64* measurement);
ViStatus _VI_FUNC rsnrpz_meass_fetchMeasurement (ViSession instrumentHandle,
                                                 ViInt32 channel,
                                                 ViReal64* measurement);
ViStatus _VI_FUNC rsnrpz_meass_readBufferMeasurement (ViSession instrumentHandle,
                                                      ViInt32 channel,
                                                      ViInt32 maximumTime_ms,
                                                      ViInt32 bufferSize,
                                                      ViReal64 _VI_FAR measurementArray[],
                                                      ViInt32* readCount);
ViStatus _VI_FUNC rsnrpz_meass_fetchBufferMeasurement (ViSession instrumentHandle,
                                                       ViInt32 channel,
                                                       ViInt32 arraySize,
                                                       ViReal64 _VI_FAR measurementArray[],
                                                       ViInt32* readCount);
ViStatus _VI_FUNC rsnrpz_meass_sendSoftwareTrigger (ViSession instrumentHandle,
                                                    ViInt32 channel);
ViStatus _VI_FUNC rsnrpz_meass_readMeasurementAux (ViSession instrumentHandle,
                                                   ViInt32 channel,
                                                   ViInt32 timeout_ms,
                                                   ViReal64* measurement,
                                                   ViReal64* aux1, ViReal64* aux2);
ViStatus _VI_FUNC rsnrpz_meass_fetchMeasurementAux (ViSession instrumentHandle,
                                                    ViInt32 channel,
                                                    ViInt32 timeout_ms,
                                                    ViReal64* measurement,
                                                    ViReal64* aux1, ViReal64* aux2);
ViStatus _VI_FUNC rsnrpz_meass_readBufferMeasurementAux (ViSession instrumentHandle,
                                                         ViInt32 channel,
                                                         ViInt32 maximumTime_ms,
                                                         ViInt32 bufferSize,
                                                         ViReal64 _VI_FAR measurementArray[],
                                                         ViReal64 _VI_FAR aux1Array[],
                                                         ViReal64 _VI_FAR aux2Array[],
                                                         ViInt32* readCount);
ViStatus _VI_FUNC rsnrpz_meass_fetchBufferMeasurementAux (ViSession instrumentHandle,
                                                          ViInt32 channel,
                                                          ViInt32 maximumTime_ms,
                                                          ViInt32 bufferSize,
                                                          ViReal64 _VI_FAR measurementArray[],
                                                          ViReal64 _VI_FAR aux1Array[],
                                                          ViReal64 _VI_FAR aux2Array[],
                                                          ViInt32* readCount);
ViStatus _VI_FUNC rsnrpz_status_preset (ViSession instrumentHandle);
ViStatus _VI_FUNC rsnrpz_status_checkCondition (ViSession instrumentHandle,
                                                ViInt32 statusClass, ViUInt32 mask,
                                                ViBoolean* state);
ViStatus _VI_FUNC rsnrpz_status_catchEvent (ViSession instrumentHandle,
                                            ViInt32 statusClass, ViUInt32 mask,
                                            ViInt32 direction);
ViStatus _VI_FUNC rsnrpz_status_checkEvent (ViSession instrumentHandle,
                                            ViInt32 statusClass, ViUInt32 mask,
                                            ViUInt32 resetMask, ViBoolean* events);
ViStatus _VI_FUNC rsnrpz_status_enableEventNotification (ViSession instrumentHandle,
                                                         ViInt32 statusClass,
                                                         ViUInt32 mask);
ViStatus _VI_FUNC rsnrpz_status_disableEventNotification (ViSession instrumentHandle,
                                                          ViInt32 statusClass,
                                                          ViUInt32 mask);
ViStatus _VI_FUNC rsnrpz_status_registerWindowMessage (ViSession instrumentHandle,
                                                       ViUInt32 *windowHandle,
                                                       ViUInt32 messageID);
ViStatus _VI_FUNC rsnrpz_errorCheckState (ViSession instrumentHandle,
                                          ViBoolean stateChecking);
ViStatus _VI_FUNC rsnrpz_reset (ViSession instrumentHandle);
ViStatus _VI_FUNC rsnrpz_self_test (ViSession instrumentHandle,
                                    ViInt16* selfTestResult,
                                    ViChar _VI_FAR selfTestMessage[]);
ViStatus _VI_FUNC rsnrpz_error_query (ViSession instrumentHandle,
                                      ViInt32* errorCode,
                                      ViChar _VI_FAR errorMessage[]);
ViStatus _VI_FUNC rsnrpz_error_message (ViSession instrumentHandle,
                                        ViStatus statusCode,
                                        ViChar _VI_FAR message[]);
ViStatus _VI_FUNC rsnrpz_revision_query (ViSession instrumentHandle,
                                         ViChar _VI_FAR instrumentDriverRevision[],
                                         ViChar _VI_FAR firmwareRevision[]);
ViStatus _VI_FUNC rsnrpz_CloseSensor (ViSession instrumentHandle, ViInt32 channel);
ViStatus _VI_FUNC rsnrpz_close (ViSession instrumentHandle);
ViStatus _VI_FUNC rsnrpz_GetSensorCount( ViSession iDummyHandle, ViInt32 *piNumConnectedSensors );
ViStatus _VI_FUNC rsnrpz_GetSensorInfo( 
                      ViSession      iDummyHandle,
                      ViInt32        iIndex,              // 1...n  (n = number of connected sensors)
                      ViChar _VI_FAR pszSensorName[],
                      ViChar _VI_FAR pszSensorType[],
                      ViChar _VI_FAR pszSensorSerial[] );
/*****************************************************************************/
/* Support of R&S USB Hub NRP-Z5                                             */
/*****************************************************************************/
ViStatus _VI_FUNC rsnrpz_GetDeviceStatusZ5( ViSession iDummyHandle, ViInt32 *piAvail );
ViStatus _VI_FUNC rsnrpz_GetDeviceInfoZ5(   ViSession         iDummyHandle,
                                            ViInt32           iPortIdx,
                                            ViChar _VI_FAR    pszSensorName[],
                                            ViChar _VI_FAR    pszSensorType[],
                                            ViChar _VI_FAR    pszSensorSerial[],
                                            ViBoolean _VI_FAR *pbConnected );
ViStatus _VI_FUNC rsnrpz_initZ5(            ViInt32     cPort,
                                            ViBoolean   IDQuery,
                                            ViBoolean   resetDevice,
                                            ViSession*  pInstrSession );
ViStatus _VI_FUNC rsnrpz_status_driverOpenState( ViBoolean* driverState );
ViStatus _VI_FUNC rsnrpz_service_getDetectorTemperature( ViSession vi, ViInt32 channel, ViReal64* pTemperature );
ViStatus _VI_FUNC rsnrpz_fw_version_check( ViSession      vi,
                                           ViInt32        iBufSize,
                                           ViChar _VI_FAR firmwareCurrent[],
                                           ViChar _VI_FAR firmwareRequiredMinimum[],
                                           ViBoolean     *pbFirmwareOkay );
/******************************************************************
   These two functions are for internal use only.
   Since they are not exported by the *.def file(s)
   we MUST NOT list them in the header file either
   -- otherwise MATLAB won't be able to load the
      rsnrpz_[32|64].dll
*******************************************************************
ViStatus _VI_FUNC rsnrpz_calib_readData(  ViSession      vi,
                                          ViInt32        channel,
                                          const ViChar **pData,
                                          ViInt32       *pCount );
ViStatus _VI_FUNC rsnrpz_calib_writeData( ViSession      vi,
                                          ViInt32        channel,
                                          const ViChar  *pData,
                                          ViInt32        arraySize );
ViStatus _VI_FUNC rsnrpz_calib_readUserData( ViSession      vi,
                                             ViInt32        channel,
                                             const ViChar **pData,
                                             ViInt32       *pCount
                                           );
ViStatus _VI_FUNC rsnrpz_calib_writeUserData( ViSession     vi,
                                              ViInt32       channel,
                                              const ViChar *pData,
                                              ViInt32       arraySize
                                            );

*******************************************************************
*/


/******************************************************************
 *
 * Functions only support by the more recent power sensor series
 * (NRPxxS and younger)
 *
 ******************************************************************
 */
ViStatus _VI_FUNC rsnrpz_setSensorName(         ViSession instrHdl, ViInt32 chan, const ViChar *pName );
ViStatus _VI_FUNC rsnrpz_getSensorName(         ViSession instrHdl, ViInt32 chan, ViChar *pName, ViUInt32 maxLen );
ViStatus _VI_FUNC rsnrpz_setLedMode(            ViSession instrHdl, ViInt32 chan, ViUInt32 ledMode );
ViStatus _VI_FUNC rsnrpz_getLedMode(            ViSession instrHdl, ViInt32 chan, ViUInt32 *pLedMode );
ViStatus _VI_FUNC rsnrpz_setLedColor(           ViSession instrHdl, ViInt32 chan, ViUInt32 color );
ViStatus _VI_FUNC rsnrpz_getLedColor(           ViSession instrHdl, ViInt32 chan, ViUInt32 *pColor );
ViStatus _VI_FUNC rsnrpz_trigger_setMasterPort( ViSession instrHdl, ViInt32 chan, ViUInt32 port );
ViStatus _VI_FUNC rsnrpz_trigger_getMasterPort( ViSession instrHdl, ViInt32 chan, ViUInt32 *port );
ViStatus _VI_FUNC rsnrpz_trigger_setSyncPort(   ViSession instrHdl, ViInt32 chan, ViUInt32 port );
ViStatus _VI_FUNC rsnrpz_trigger_getSyncPort(   ViSession instrHdl, ViInt32 chan, ViUInt32 *port );
ViStatus _VI_FUNC rsnrpz_getUsageMap(           ViSession iDummyHandle, ViChar cpMap[], ViUInt32 maxLen, ViUInt32 *pRetLen );