Include/rsnrpz.bas

Declare Function rsnrpz_chan_getAuxiliary Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, auxiliaryValue As Long) As Long
Declare Function rsnrpz_meass_readMeasurement Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal timeout_ms As Long, measurement As Double) As Long
Declare Function rsnrpz_meass_fetchMeasurement Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, measurement As Double) As Long
Declare Function rsnrpz_meass_readBufferMeasurement Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal maximumTime_ms As Long, ByVal bufferSize As Long, measurementArray As Double, readCount As Long) As Long
Declare Function rsnrpz_meass_fetchBufferMeasurement Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal arraySize As Long, measurementArray As Double, readCount As Long) As Long
Declare Function rsnrpz_meass_sendSoftwareTrigger Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long) As Long
Declare Function rsnrpz_meass_readMeasurementAux Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal timeout_ms As Long, measurement As Double, aux1 As Double, aux2 As Double) As Long
Declare Function rsnrpz_meass_fetchMeasurementAux Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal timeout_ms As Long, measurement As Double, aux1 As Double, aux2 As Double) As Long
Declare Function rsnrpz_meass_readBufferMeasurementAux Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal maximumTime_ms As Long, ByVal bufferSize As Long, measurementArray As Double, aux1Array As Double, aux2Array As Double, readCount As Long) As Long
Declare Function rsnrpz_meass_fetchBufferMeasurementAux Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long, ByVal maximumTime_ms As Long, ByVal bufferSize As Long, measurementArray As Double, aux1Array As Double, aux2Array As Double, readCount As Long) As Long
Declare Function rsnrpz_status_preset Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long) As Long
Declare Function rsnrpz_status_checkCondition Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusClass As Long, ByVal mask As Long, x_state As Integer) As Long
Declare Function rsnrpz_status_catchEvent Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusClass As Long, ByVal mask As Long, ByVal direction As Long) As Long
Declare Function rsnrpz_status_checkEvent Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusClass As Long, ByVal mask As Long, ByVal resetMask As Long, events As Integer) As Long
Declare Function rsnrpz_status_enableEventNotification Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusClass As Long, ByVal mask As Long) As Long
Declare Function rsnrpz_status_disableEventNotification Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusClass As Long, ByVal mask As Long) As Long
Declare Function rsnrpz_status_registerWindowMessage Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, windowHandle As Long, ByVal messageID As Long) As Long
Declare Function rsnrpz_errorCheckState Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal stateChecking As Integer) As Long
Declare Function rsnrpz_reset Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long) As Long
Declare Function rsnrpz_self_test Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, selfTestResult As Integer, ByVal selfTestMessage As String) As Long
Declare Function rsnrpz_error_query Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, errorCode As Long, ByVal errorMessage As String) As Long
Declare Function rsnrpz_error_message Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal statusCode As Long, ByVal message As String) As Long
Declare Function rsnrpz_revision_query Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal instrumentDriverRevision As String, ByVal firmwareRevision As String) As Long
Declare Function rsnrpz_CloseSensor Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long, ByVal channel As Long) As Long
Declare Function rsnrpz_close Lib "rsnrpz_32.dll" ( ByVal instrumentHandle As Long) As Long

Declare Function rsnrpz_GetSensorCount Lib "rsnrpz_32.dll" ( ByVal iDummyHandle As Long, piCount As Long) As Long
Declare Function rsnrpz_GetSensorInfo Lib "rsnrpz_32.dll" ( ByVal iDummyHandle As Long, ByVal iChannel As Long, ByVal pszSensorName As String, ByVal pszSensorType As String, ByVal pszSensorSerial As String) As Long

'***************************************************************************
' Support of R&S USB Hub NRP-Z5                                             
'***************************************************************************
Declare Function rsnrpz_GetDeviceStatusZ5 Lib "rsnrpz_32.dll" ( ByVal iDummyHandle As Long, piAvail As Long) As Long
Declare Function rsnrpz_GetDeviceInfoZ5 Lib "rsnrpz_32.dll" ( ByVal iDummyHandle As Long, ByVal iPortIdx As Long, ByVal pszSensorName As String, ByVal pszSensorType As String, ByVal pszSensorSerial As String, pbConnected As Integer) As Long
Declare Function rsnrpz_initZ5 Lib "rsnrpz_32.dll" ( ByVal cPort As Long, ByVal IDQuery As Integer, ByVal resetDevice As Integer, pInstrSession As Long) As Long
Declare Function rsnrpz_status_driverOpenState Lib "rsnrpz_32.dll" ( driverState As Integer) As Long
Declare Function rsnrpz_service_getDetectorTemperature Lib "rsnrpz_32.dll" ( ByVal vi As Long, ByVal channel As Long, pTemperature As Double) As Long
Declare Function rsnrpz_fw_version_check Lib "rsnrpz_32.dll" ( ByVal vi As Long, ByVal iBufSize As Long, ByVal firmwareCurrent As String, ByVal firmwareRequiredMinimum As String, pbFirmwareOkay As Integer) As Long
Declare Function rsnrpz_setSensorName Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal pName As String)  As Long
Declare Function rsnrpz_getSensorName Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal pName As String, ByVal maxLen As Long) As Long
Declare Function rsnrpz_setLedMode Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal ledMode As Long) As Long
Declare Function rsnrpz_getLedMode Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, pLedMode As Long) As Long
Declare Function rsnrpz_setLedColor Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal x_color As Long) As Long
Declare Function rsnrpz_getLedColor Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, pColor As Long) As Long
Declare Function rsnrpz_trigger_setMasterPort Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal x_port As Long) As Long
Declare Function rsnrpz_trigger_getMasterPort Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, x_port As Long) As Long
Declare Function rsnrpz_trigger_setSyncPort Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, ByVal x_port As Long) As Long
Declare Function rsnrpz_trigger_getSyncPort Lib "rsnrpz_32.dll" ( ByVal instrHdl As Long, ByVal chan As Long, x_port As Long) As Long
Declare Function rsnrpz_getUsageMap Lib "rsnrpz_32.dll" ( ByVal iDummyHandle As Long, ByVal cpMap As String, ByVal maxLen As Long, pRetLen As Long) As Long
